--- a/CuidooApp/Scenes/Request/BabySitterView/BabySitterInfosView.xib
+++ b/CuidooApp/Scenes/Request/BabySitterView/BabySitterInfosView.xib
@@ -9,10 +9,16 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BabySitterInfosView" customModule="CuidooApp" customModuleProvider="target">
             <connections>
+                <outlet property="avaliationLabel" destination="5WW-LX-Pns" id="tDp-hc-XKx"/>
                 <outlet property="babySitterImage" destination="wQR-7u-0lV" id="lz2-0H-ucp"/>
                 <outlet property="bottomView" destination="pEo-Kw-0Yb" id="14D-nG-hf5"/>
+                <outlet property="cuidadosLabel" destination="zKo-AH-RwW" id="y9o-cz-K55"/>
+                <outlet property="descriptionLabel" destination="Zyl-kD-jb5" id="0OG-YI-PR1"/>
                 <outlet property="descriptionText" destination="Zyl-kD-jb5" id="xQa-zR-0wm"/>
                 <outlet property="heartbutton" destination="yR4-yf-zmB" id="pBA-rr-u7X"/>
+                <outlet property="nameLabel" destination="erF-RK-9nG" id="Kqc-OA-wkC"/>
+                <outlet property="profissionLabel" destination="z8z-jy-6AQ" id="3eB-q6-6Yx"/>
+                <outlet property="twoYearsLabel" destination="Q1G-2N-UzE" id="NMm-62-n93"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -28,7 +34,7 @@
                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                 </imageView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retângulo 312" translatesAutoresizingMaskIntoConstraints="NO" id="afx-pw-pOY">
-                    <rect key="frame" x="0.0" y="374" width="414" height="80"/>
+                    <rect key="frame" x="0.0" y="294" width="414" height="160"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pEo-Kw-0Yb">
                     <rect key="frame" x="0.0" y="454" width="414" height="252"/>
