--- a/CuidooApp/Scenes/Requesting/Cells/AboutCell/AboutCell.xib
+++ b/CuidooApp/Scenes/Requesting/Cells/AboutCell/AboutCell.xib
@@ -1,21 +1,61 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AboutCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="106" id="KGk-i7-Jjw" customClass="AboutCell" customModule="CuidooApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="348" height="106"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="348" height="106"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xci-C5-dYK">
+                        <rect key="frame" x="0.0" y="0.0" width="348" height="106"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DESCRIÇÃO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lrj-7f-DrE">
+                                <rect key="frame" x="128" y="16" width="92" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="2Jp-cU-YrC"/>
+                                    <constraint firstAttribute="width" constant="92" id="LCt-jn-jXp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggn-Vx-Q8z">
+                                <rect key="frame" x="16" y="44" width="316" height="54"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="ggn-Vx-Q8z" secondAttribute="bottom" constant="8" id="Lmd-Ud-icE"/>
+                            <constraint firstAttribute="trailing" secondItem="ggn-Vx-Q8z" secondAttribute="trailing" constant="16" id="MTq-7f-5Kg"/>
+                            <constraint firstItem="ggn-Vx-Q8z" firstAttribute="top" secondItem="lrj-7f-DrE" secondAttribute="bottom" constant="8" id="PXm-d2-sYX"/>
+                            <constraint firstItem="lrj-7f-DrE" firstAttribute="top" secondItem="xci-C5-dYK" secondAttribute="top" constant="16" id="bhg-Ob-I2s"/>
+                            <constraint firstItem="ggn-Vx-Q8z" firstAttribute="leading" secondItem="xci-C5-dYK" secondAttribute="leading" constant="16" id="omc-bb-mgl"/>
+                            <constraint firstItem="lrj-7f-DrE" firstAttribute="centerX" secondItem="xci-C5-dYK" secondAttribute="centerX" id="vNf-VO-EE1"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="xci-C5-dYK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="KAw-Ch-2Wq"/>
+                    <constraint firstItem="xci-C5-dYK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="MwT-BI-yR4"/>
+                    <constraint firstAttribute="trailing" secondItem="xci-C5-dYK" secondAttribute="trailing" id="Ww5-XF-1ud"/>
+                    <constraint firstAttribute="bottom" secondItem="xci-C5-dYK" secondAttribute="bottom" id="sUR-G8-5OC"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <point key="canvasLocation" x="155.07246376811597" y="164.73214285714286"/>
         </tableViewCell>
     </objects>
 </document>
