--- a/CuidooApp/Scenes/Requesting/Cells/RecomendationCell/RecomendationCell.xib
+++ b/CuidooApp/Scenes/Requesting/Cells/RecomendationCell/RecomendationCell.xib
@@ -1,21 +1,115 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RecomendationCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="127" id="KGk-i7-Jjw" customClass="RecommendationCell" customModule="CuidooApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="370" height="127"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="370" height="127"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bpe-m4-sEp">
+                        <rect key="frame" x="10" y="10" width="350" height="107"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="woman" translatesAutoresizingMaskIntoConstraints="NO" id="0mu-q7-qny">
+                                <rect key="frame" x="16" y="16" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="42" id="Aeb-fk-deK"/>
+                                    <constraint firstAttribute="height" constant="45" id="GvP-t2-g8V"/>
+                                    <constraint firstAttribute="width" constant="45" id="oNJ-tW-TcJ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m1H-1J-Ym3">
+                                <rect key="frame" x="73" y="16" width="47.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="00/00/0000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kK5-qS-zph">
+                                <rect key="frame" x="73" y="39" width="100" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Texto" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RiS-sI-n2V">
+                                <rect key="frame" x="16" y="67" width="318" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zey-l8-kHm">
+                                <rect key="frame" x="224" y="16" width="110" height="18"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="NKk-1S-9Rx">
+                                        <rect key="frame" x="0.0" y="0.0" width="22" height="18"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="FQN-uZ-OLD">
+                                        <rect key="frame" x="22" y="0.0" width="22" height="18"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="sfU-AP-TCZ">
+                                        <rect key="frame" x="44" y="0.0" width="22" height="18"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="05V-LG-KgR">
+                                        <rect key="frame" x="66" y="0.0" width="22" height="18"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="eJG-af-y02">
+                                        <rect key="frame" x="88" y="0.0" width="22" height="18"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="m1H-1J-Ym3" firstAttribute="leading" secondItem="0mu-q7-qny" secondAttribute="trailing" constant="12" id="3ls-Dj-vPG"/>
+                            <constraint firstAttribute="trailing" secondItem="RiS-sI-n2V" secondAttribute="trailing" constant="16" id="6zD-p0-TGy"/>
+                            <constraint firstItem="RiS-sI-n2V" firstAttribute="leading" secondItem="Bpe-m4-sEp" secondAttribute="leading" constant="16" id="MmJ-lz-Nri"/>
+                            <constraint firstAttribute="trailing" secondItem="zey-l8-kHm" secondAttribute="trailing" constant="16" id="WyH-Hf-MwF"/>
+                            <constraint firstAttribute="bottom" secondItem="RiS-sI-n2V" secondAttribute="bottom" constant="10" id="aI3-6p-uHm"/>
+                            <constraint firstItem="m1H-1J-Ym3" firstAttribute="top" secondItem="Bpe-m4-sEp" secondAttribute="top" constant="16" id="dOP-69-1NR"/>
+                            <constraint firstItem="kK5-qS-zph" firstAttribute="leading" secondItem="0mu-q7-qny" secondAttribute="trailing" constant="12" id="hio-FS-YPS"/>
+                            <constraint firstItem="kK5-qS-zph" firstAttribute="top" secondItem="m1H-1J-Ym3" secondAttribute="bottom" constant="2" id="i9R-00-DPA"/>
+                            <constraint firstItem="0mu-q7-qny" firstAttribute="top" secondItem="Bpe-m4-sEp" secondAttribute="top" constant="16" id="iSu-Gd-fpN"/>
+                            <constraint firstItem="RiS-sI-n2V" firstAttribute="top" secondItem="zey-l8-kHm" secondAttribute="bottom" constant="33" id="nKe-tp-gfD"/>
+                            <constraint firstItem="RiS-sI-n2V" firstAttribute="top" secondItem="0mu-q7-qny" secondAttribute="bottom" constant="6" id="vHJ-zT-aDh"/>
+                            <constraint firstItem="0mu-q7-qny" firstAttribute="leading" secondItem="Bpe-m4-sEp" secondAttribute="leading" constant="16" id="x8k-8W-153"/>
+                            <constraint firstItem="zey-l8-kHm" firstAttribute="top" secondItem="Bpe-m4-sEp" secondAttribute="top" constant="16" id="ywg-9c-OXT"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="Bpe-m4-sEp" secondAttribute="bottom" constant="10" id="CNn-bi-2Lg"/>
+                    <constraint firstItem="Bpe-m4-sEp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Ry4-Sq-GUR"/>
+                    <constraint firstAttribute="trailing" secondItem="Bpe-m4-sEp" secondAttribute="trailing" constant="10" id="XOs-Zq-RqA"/>
+                    <constraint firstItem="Bpe-m4-sEp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="jgg-MB-I6p"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="backView" destination="Bpe-m4-sEp" id="HKg-Ac-js0"/>
+                <outlet property="imageViewBabySitter" destination="0mu-q7-qny" id="m3J-ey-dDW"/>
+                <outlet property="nameBabySitter" destination="m1H-1J-Ym3" id="Toc-ql-WLo"/>
+                <outlet property="textEvaluationLabel" destination="RiS-sI-n2V" id="Dqd-nj-31E"/>
+                <outlet property="timestampLabel" destination="kK5-qS-zph" id="dH4-pm-UcN"/>
+                <outletCollection property="ratingStackView" destination="NKk-1S-9Rx" collectionClass="NSMutableArray" id="8qK-zs-HpT"/>
+                <outletCollection property="ratingStackView" destination="FQN-uZ-OLD" collectionClass="NSMutableArray" id="ftf-X5-ElR"/>
+                <outletCollection property="ratingStackView" destination="sfU-AP-TCZ" collectionClass="NSMutableArray" id="mL7-fx-agz"/>
+                <outletCollection property="ratingStackView" destination="05V-LG-KgR" collectionClass="NSMutableArray" id="EGH-IM-qWm"/>
+                <outletCollection property="ratingStackView" destination="eJG-af-y02" collectionClass="NSMutableArray" id="H8U-t0-Y6v"/>
+                <outletCollection property="ratingStackView" destination="NKk-1S-9Rx" collectionClass="NSMutableArray" id="drW-2g-UBv"/>
+            </connections>
+            <point key="canvasLocation" x="169.56521739130437" y="157.70089285714286"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="star" catalog="system" width="64" height="58"/>
+        <image name="woman" width="1000" height="667"/>
+    </resources>
 </document>
