Entrada ramificada, criação da SearchBabaStoryboard

--- a/CuidooApp/Storyboards/Base.lproj/Auth.storyboard
+++ b/CuidooApp/Storyboards/Base.lproj/Auth.storyboard
@@ -43,9 +43,6 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="Proxima tela"/>
-                                <connections>
-                                    <segue destination="qQB-St-NMw" kind="presentation" modalPresentationStyle="fullScreen" id="iml-oo-Vsc"/>
-                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Usuario" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Ys-lK-up7">
                                 <rect key="frame" x="40" y="266" width="335" height="34"/>
@@ -101,6 +98,8 @@
                     <connections>
                         <outlet property="passwordTextField" destination="Owf-aF-nm7" id="5VV-L7-ySp"/>
                         <outlet property="userTextField" destination="8Ys-lK-up7" id="cP7-kG-H5T"/>
+                        <segue destination="Ccv-Sy-Wnr" kind="presentation" identifier="SearchBabaSegue" modalPresentationStyle="fullScreen" id="jZ5-e0-kgn"/>
+                        <segue destination="qQB-St-NMw" kind="presentation" identifier="SearchSegue" modalPresentationStyle="fullScreen" id="pxR-T2-Del"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y64-ar-bK9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -115,7 +114,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Ct-yE-0tK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="98" y="1371"/>
+            <point key="canvasLocation" x="-262" y="1359"/>
         </scene>
         <!--Search-->
         <scene sceneID="Xqh-xJ-pkH">
@@ -125,7 +124,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Umb-te-D3g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-120" y="1371"/>
+            <point key="canvasLocation" x="243" y="1359"/>
+        </scene>
+        <!--SearchBaba-->
+        <scene sceneID="mfN-jD-cXR">
+            <objects>
+                <viewControllerPlaceholder storyboardName="SearchBaba" id="Ccv-Sy-Wnr" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="j4d-Ka-IOT"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W2l-sA-Pwi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4" y="1359"/>
         </scene>
     </scenes>
 </document>
