Screen ProfileBabySitter DONE

--- a/CuidooApp/Storyboards/Request.storyboard
+++ b/CuidooApp/Storyboards/Request.storyboard
@@ -24,6 +24,7 @@
                                 <state key="normal" title="CONFIRMAR"/>
                                 <connections>
                                     <action selector="didClickConfirm:" destination="ymi-OD-QlD" eventType="touchUpInside" id="yL5-BV-7zs"/>
+                                    <segue destination="B8G-Ve-Fm0" kind="presentation" modalPresentationStyle="fullScreen" id="3UT-ua-Zdd"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WHe-9f-Q24">
@@ -37,10 +38,10 @@
                                     <action selector="didClickSeeNext:" destination="ymi-OD-QlD" eventType="touchUpInside" id="8ab-A0-eNd"/>
                                 </connections>
                             </button>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8N-PZ-850">
+                            <scrollView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8N-PZ-850">
                                 <rect key="frame" x="16" y="104" width="382" height="644"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KYG-Th-P9N" customClass="BabySitterInfosView" customModule="CuidooApp" customModuleProvider="target">
+                                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KYG-Th-P9N" customClass="BabySitterInfosView" customModule="CuidooApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="382" height="644"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
@@ -86,6 +87,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ip3-3G-Ydx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1957.9710144927537" y="150.66964285714286"/>
+        </scene>
+        <!--Requesting-->
+        <scene sceneID="kSz-pf-msj">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Requesting" id="B8G-Ve-Fm0" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="y98-UV-hZS"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gtC-F9-tsU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2495" y="393"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="kIi-WT-LNZ">
