--- a/CuidooApp/Scenes/Requesting/Cells/DataPictureCell/DataPictureCell.xib
+++ b/CuidooApp/Scenes/Requesting/Cells/DataPictureCell/DataPictureCell.xib
@@ -9,48 +9,61 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="216" id="KGk-i7-Jjw" customClass="DataPictureCell" customModule="CuidooApp" customModuleProvider="target">
+        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="DataPictureCell" rowHeight="216" id="KGk-i7-Jjw" customClass="DataPictureCell" customModule="CuidooApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="322" height="216"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="322" height="216"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Claudia" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="144-Hn-3aI">
-                        <rect key="frame" x="125" y="128" width="72.5" height="26.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="34 anos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFS-7P-mpc">
-                        <rect key="frame" x="130" y="158.5" width="62" height="21"/>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estudante de Enfermagem" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Njo-ew-WFN">
-                        <rect key="frame" x="61" y="183.5" width="200.5" height="21"/>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="moça" translatesAutoresizingMaskIntoConstraints="NO" id="Y1b-Qi-waX">
-                        <rect key="frame" x="111" y="16" width="100" height="100"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="joQ-my-hBz">
+                        <rect key="frame" x="0.0" y="0.0" width="322" height="216"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="144-Hn-3aI">
+                                <rect key="frame" x="132.5" y="132" width="57.5" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="idade" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFS-7P-mpc">
+                                <rect key="frame" x="140" y="163" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profissão" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Njo-ew-WFN">
+                                <rect key="frame" x="126" y="188" width="70" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="woman" translatesAutoresizingMaskIntoConstraints="NO" id="Y1b-Qi-waX">
+                                <rect key="frame" x="111" y="20" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="W3L-dA-Lfu"/>
+                                    <constraint firstAttribute="width" constant="100" id="Xdb-RB-JVC"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="100" id="W3L-dA-Lfu"/>
-                            <constraint firstAttribute="width" constant="100" id="Xdb-RB-JVC"/>
+                            <constraint firstItem="Y1b-Qi-waX" firstAttribute="centerX" secondItem="joQ-my-hBz" secondAttribute="centerX" id="1TS-IW-IGf"/>
+                            <constraint firstItem="dFS-7P-mpc" firstAttribute="top" secondItem="144-Hn-3aI" secondAttribute="bottom" constant="4" id="Ifg-Ju-hvg"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="216" id="Jfv-ES-yoG"/>
+                            <constraint firstItem="Njo-ew-WFN" firstAttribute="centerX" secondItem="joQ-my-hBz" secondAttribute="centerX" id="Jyr-2g-x8f"/>
+                            <constraint firstItem="144-Hn-3aI" firstAttribute="centerX" secondItem="joQ-my-hBz" secondAttribute="centerX" id="JzA-KI-N21"/>
+                            <constraint firstItem="Njo-ew-WFN" firstAttribute="top" secondItem="dFS-7P-mpc" secondAttribute="bottom" constant="4" id="fMr-Py-kA0"/>
+                            <constraint firstItem="Y1b-Qi-waX" firstAttribute="top" secondItem="joQ-my-hBz" secondAttribute="top" constant="20" id="hrd-UR-RXO"/>
+                            <constraint firstItem="dFS-7P-mpc" firstAttribute="centerX" secondItem="joQ-my-hBz" secondAttribute="centerX" id="sUc-Xd-P1D"/>
+                            <constraint firstItem="144-Hn-3aI" firstAttribute="top" secondItem="Y1b-Qi-waX" secondAttribute="bottom" constant="12" id="zQr-78-oer"/>
                         </constraints>
-                    </imageView>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Njo-ew-WFN" firstAttribute="top" secondItem="dFS-7P-mpc" secondAttribute="bottom" constant="4" id="1Wb-ls-gQ7"/>
-                    <constraint firstItem="Njo-ew-WFN" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="kIs-R0-iDM"/>
-                    <constraint firstItem="Y1b-Qi-waX" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="la2-nn-XdV"/>
-                    <constraint firstItem="dFS-7P-mpc" firstAttribute="top" secondItem="144-Hn-3aI" secondAttribute="bottom" constant="4" id="mv0-dc-Kdb"/>
-                    <constraint firstItem="144-Hn-3aI" firstAttribute="top" secondItem="Y1b-Qi-waX" secondAttribute="bottom" constant="12" id="oRd-mW-ms4"/>
-                    <constraint firstItem="dFS-7P-mpc" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="qam-PE-MZm"/>
-                    <constraint firstItem="Y1b-Qi-waX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="wYY-U4-k8r"/>
-                    <constraint firstItem="144-Hn-3aI" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="ybF-mK-GBW"/>
+                    <constraint firstAttribute="bottom" secondItem="joQ-my-hBz" secondAttribute="bottom" id="7ro-lc-2gl"/>
+                    <constraint firstItem="joQ-my-hBz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Jeo-4D-ZEG"/>
+                    <constraint firstAttribute="trailing" secondItem="joQ-my-hBz" secondAttribute="trailing" id="hm7-qL-Ta5"/>
+                    <constraint firstItem="joQ-my-hBz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="oil-qW-VCm"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -64,6 +77,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="moça" width="359" height="621"/>
+        <image name="woman" width="1000" height="667"/>
     </resources>
 </document>
