--- a/CuidooApp/Scenes/Requesting/Cells/EvaluationCell/EvaluationCell.xib
+++ b/CuidooApp/Scenes/Requesting/Cells/EvaluationCell/EvaluationCell.xib
@@ -9,24 +9,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="EvaluationCell" customModule="CuidooApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="455" height="80"/>
+        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="EvaluationCell" rowHeight="113" id="KGk-i7-Jjw" customClass="EvaluationCell" customModule="CuidooApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="487" height="113"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="455" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="487" height="113"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IEy-NS-Kp0">
-                        <rect key="frame" x="0.0" y="-3" width="455" height="86"/>
+                        <rect key="frame" x="0.0" y="8" width="487" height="97"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hYV-Ft-HbD">
-                                <rect key="frame" x="4" y="4" width="447" height="78"/>
+                                <rect key="frame" x="4" y="4" width="479" height="89"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" horizontalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="YD8-Vr-nF8">
-                                        <rect key="frame" x="0.0" y="0.0" width="149" height="78"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="159.5" height="89"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Mk3-Lc-Pnv">
-                                                <rect key="frame" x="53.5" y="16" width="42" height="22.5"/>
+                                                <rect key="frame" x="59" y="16" width="42" height="22.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="28" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MUg-b0-Qem">
                                                         <rect key="frame" x="0.0" y="0.0" width="22" height="22.5"/>
@@ -40,31 +40,31 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CUIDADOS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U4C-1j-hvd">
-                                                <rect key="frame" x="39" y="40.5" width="71" height="17"/>
+                                                <rect key="frame" x="44.5" y="40.5" width="71" height="17"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
+                                            <constraint firstItem="Mk3-Lc-Pnv" firstAttribute="centerX" secondItem="YD8-Vr-nF8" secondAttribute="centerX" id="Kq2-gE-J95"/>
                                             <constraint firstItem="U4C-1j-hvd" firstAttribute="top" secondItem="Mk3-Lc-Pnv" secondAttribute="bottom" constant="2" id="O9N-cj-CKX"/>
                                             <constraint firstItem="U4C-1j-hvd" firstAttribute="centerX" secondItem="YD8-Vr-nF8" secondAttribute="centerX" id="Sb6-6Z-n6y"/>
-                                            <constraint firstItem="Mk3-Lc-Pnv" firstAttribute="centerX" secondItem="YD8-Vr-nF8" secondAttribute="centerX" id="Wzl-kh-UWk"/>
                                             <constraint firstItem="Mk3-Lc-Pnv" firstAttribute="top" secondItem="YD8-Vr-nF8" secondAttribute="top" constant="16" id="lps-I9-eNW"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Cfz-d8-0JL">
-                                        <rect key="frame" x="149" y="0.0" width="149" height="78"/>
+                                        <rect key="frame" x="159.5" y="0.0" width="160" height="89"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AVALIAÇÃO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Dv-Od-gsd">
-                                                <rect key="frame" x="37.5" y="37" width="74.5" height="24"/>
+                                                <rect key="frame" x="43" y="37" width="74.5" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xRY-7D-Q7D">
-                                                <rect key="frame" x="44.5" y="16" width="60" height="17"/>
+                                                <rect key="frame" x="50" y="16" width="60" height="17"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lJc-6Z-oUQ">
                                                         <rect key="frame" x="0.0" y="0.0" width="38" height="17"/>
@@ -82,7 +82,7 @@
                                                 </subviews>
                                             </stackView>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
                                             <constraint firstItem="xRY-7D-Q7D" firstAttribute="centerX" secondItem="Cfz-d8-0JL" secondAttribute="centerX" id="2CF-x9-qqQ"/>
                                             <constraint firstItem="xRY-7D-Q7D" firstAttribute="top" secondItem="Cfz-d8-0JL" secondAttribute="top" constant="16" id="2Jv-Xb-uIc"/>
@@ -91,22 +91,22 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" horizontalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="sZc-5C-cSo">
-                                        <rect key="frame" x="298" y="0.0" width="149" height="78"/>
+                                        <rect key="frame" x="319.5" y="0.0" width="159.5" height="89"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 anos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRa-34-WAM">
-                                                <rect key="frame" x="47.5" y="16" width="54" height="20.5"/>
+                                                <rect key="frame" x="52.5" y="16" width="54" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <color key="textColor" red="0.38823807240000002" green="0.38823020460000002" blue="0.388235569" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EXPERIÊNCIA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wm5-Ax-0O9">
-                                                <rect key="frame" x="31.5" y="40.5" width="86.5" height="17"/>
+                                                <rect key="frame" x="36.5" y="40.5" width="86.5" height="17"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
                                             <constraint firstItem="wm5-Ax-0O9" firstAttribute="top" secondItem="SRa-34-WAM" secondAttribute="bottom" constant="4" id="Bxc-0V-CGc"/>
                                             <constraint firstItem="SRa-34-WAM" firstAttribute="centerX" secondItem="sZc-5C-cSo" secondAttribute="centerX" id="Qaf-go-oyR"/>
@@ -120,22 +120,26 @@
                                     <constraint firstItem="Cfz-d8-0JL" firstAttribute="centerX" secondItem="hYV-Ft-HbD" secondAttribute="centerX" id="L0w-jq-JKU"/>
                                     <constraint firstItem="wm5-Ax-0O9" firstAttribute="centerY" secondItem="9Dv-Od-gsd" secondAttribute="centerY" id="SVj-z0-WBR"/>
                                     <constraint firstItem="9Dv-Od-gsd" firstAttribute="centerY" secondItem="U4C-1j-hvd" secondAttribute="centerY" id="aEH-50-md4"/>
-                                    <constraint firstAttribute="height" constant="78" id="ec7-IB-oII"/>
+                                    <constraint firstItem="YD8-Vr-nF8" firstAttribute="centerY" secondItem="hYV-Ft-HbD" secondAttribute="centerY" id="afi-00-FN6"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="hYV-Ft-HbD" secondAttribute="trailing" constant="4" id="19S-uA-z92"/>
-                            <constraint firstAttribute="bottom" secondItem="hYV-Ft-HbD" secondAttribute="bottom" constant="4" id="5Fl-bg-fU2"/>
-                            <constraint firstItem="hYV-Ft-HbD" firstAttribute="top" secondItem="IEy-NS-Kp0" secondAttribute="top" constant="4" id="IrP-68-x0Q"/>
+                            <constraint firstItem="hYV-Ft-HbD" firstAttribute="centerY" secondItem="IEy-NS-Kp0" secondAttribute="centerY" id="H41-L9-2SC"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="N2J-wO-BUy"/>
+                            <constraint firstAttribute="bottom" secondItem="hYV-Ft-HbD" secondAttribute="bottom" constant="4" id="ipk-pt-rT0"/>
+                            <constraint firstItem="hYV-Ft-HbD" firstAttribute="centerX" secondItem="IEy-NS-Kp0" secondAttribute="centerX" id="n5n-Le-GGV"/>
+                            <constraint firstItem="hYV-Ft-HbD" firstAttribute="top" secondItem="IEy-NS-Kp0" secondAttribute="top" constant="4" id="sYg-an-8Oc"/>
                             <constraint firstItem="hYV-Ft-HbD" firstAttribute="leading" secondItem="IEy-NS-Kp0" secondAttribute="leading" constant="4" id="tlr-Uk-duZ"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="IEy-NS-Kp0" secondAttribute="bottom" constant="8" id="4wv-ZJ-NT5"/>
                     <constraint firstAttribute="trailing" secondItem="IEy-NS-Kp0" secondAttribute="trailing" id="JMA-b6-q1g"/>
-                    <constraint firstItem="IEy-NS-Kp0" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="cud-hS-Ayz"/>
+                    <constraint firstItem="IEy-NS-Kp0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Qfq-P1-fve"/>
                     <constraint firstItem="IEy-NS-Kp0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="fnb-gn-FKr"/>
                 </constraints>
             </tableViewCellContentView>
@@ -145,7 +149,7 @@
                 <outlet property="experience" destination="SRa-34-WAM" id="Jrf-62-z9j"/>
                 <outlet property="numberOfJobs" destination="MUg-b0-Qem" id="YdA-ZG-7sY"/>
             </connections>
-            <point key="canvasLocation" x="403.62318840579712" y="141.96428571428569"/>
+            <point key="canvasLocation" x="345.6521739130435" y="128.90625"/>
         </tableViewCell>
     </objects>
     <resources>
