--- a/CuidooApp/Scenes/Requesting/Cells/RecommendationCell/RecommendationCell.xib
+++ b/CuidooApp/Scenes/Requesting/Cells/RecommendationCell/RecommendationCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="127" id="KGk-i7-Jjw" customClass="RecommendationCell" customModule="CuidooApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="RecommendationCell" rowHeight="127" id="KGk-i7-Jjw" customClass="RecommendationCell" customModule="CuidooApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="370" height="127"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -19,7 +19,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bpe-m4-sEp">
                         <rect key="frame" x="10" y="10" width="350" height="107"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="woman" translatesAutoresizingMaskIntoConstraints="NO" id="0mu-q7-qny">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mom" translatesAutoresizingMaskIntoConstraints="NO" id="0mu-q7-qny">
                                 <rect key="frame" x="16" y="16" width="45" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="42" id="Aeb-fk-deK"/>
@@ -109,7 +109,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="mom" width="842" height="782"/>
         <image name="star" catalog="system" width="64" height="58"/>
-        <image name="woman" width="1000" height="667"/>
     </resources>
 </document>
