--- a/CuidooApp/Storyboards/Requesting.storyboard
+++ b/CuidooApp/Storyboards/Requesting.storyboard
@@ -1,7 +1,89 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bad-uj-oJe">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Confirmar Cuidadora-->
+        <scene sceneID="lbk-fO-caR">
+            <objects>
+                <viewController id="8xf-md-nD6" customClass="RequestingViewController" customModule="CuidooApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yIX-qH-asI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5AL-z5-GeY">
+                                <rect key="frame" x="16" y="780" width="183" height="66"/>
+                                <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="66" id="h6T-bg-1GY"/>
+                                </constraints>
+                                <state key="normal" title="REPORTAR"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MdX-k1-JtL">
+                                <rect key="frame" x="215" y="780" width="183" height="66"/>
+                                <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="66" id="qLr-EX-LOO"/>
+                                </constraints>
+                                <state key="normal" title="FINALIZAR"/>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Fu0-E1-n9P">
+                                <rect key="frame" x="0.0" y="88" width="414" height="684"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="5AL-z5-GeY" firstAttribute="top" secondItem="Fu0-E1-n9P" secondAttribute="bottom" constant="8" id="CSO-3a-cH9"/>
+                            <constraint firstItem="MdX-k1-JtL" firstAttribute="leading" secondItem="5AL-z5-GeY" secondAttribute="trailing" constant="16" id="Feb-we-S5d"/>
+                            <constraint firstItem="MdX-k1-JtL" firstAttribute="centerY" secondItem="5AL-z5-GeY" secondAttribute="centerY" id="K8M-Kt-TFk"/>
+                            <constraint firstItem="Fu0-E1-n9P" firstAttribute="leading" secondItem="o7O-gU-ARH" secondAttribute="leading" id="WRe-DB-jts"/>
+                            <constraint firstItem="5AL-z5-GeY" firstAttribute="leading" secondItem="o7O-gU-ARH" secondAttribute="leading" constant="16" id="Xg2-kH-Crw"/>
+                            <constraint firstItem="o7O-gU-ARH" firstAttribute="trailing" secondItem="MdX-k1-JtL" secondAttribute="trailing" constant="16" id="jzs-5h-KxA"/>
+                            <constraint firstItem="o7O-gU-ARH" firstAttribute="trailing" secondItem="Fu0-E1-n9P" secondAttribute="trailing" id="oMR-0M-FMX"/>
+                            <constraint firstItem="o7O-gU-ARH" firstAttribute="bottom" secondItem="5AL-z5-GeY" secondAttribute="bottom" constant="16" id="yph-HG-gRT"/>
+                            <constraint firstItem="Fu0-E1-n9P" firstAttribute="top" secondItem="o7O-gU-ARH" secondAttribute="top" id="z13-y6-7Gn"/>
+                            <constraint firstItem="5AL-z5-GeY" firstAttribute="width" secondItem="MdX-k1-JtL" secondAttribute="width" id="zVa-Me-hwC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="o7O-gU-ARH"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Confirmar Cuidadora" id="qsS-3H-rq3">
+                        <barButtonItem key="rightBarButtonItem" image="text.bubble" catalog="system" id="E8q-lV-UaG">
+                            <color key="tintColor" red="1" green="0.34509803919999998" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="requestingTableView" destination="Fu0-E1-n9P" id="szb-Pq-rdf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bhn-U3-aCn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1249.2753623188407" y="50.892857142857139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="iaD-Li-ogv">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bad-uj-oJe" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9Ft-cK-WaY">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8xf-md-nD6" kind="relationship" relationship="rootViewController" id="m5C-Aw-NJi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eNK-7M-ze9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="339.13043478260875" y="50.892857142857139"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="text.bubble" catalog="system" width="64" height="54"/>
+    </resources>
 </document>
